Fix: Fix DateUtil (#79)
* fix DateUtil

* Implement GlobalExceptionHandler

* Add CORS domain

* fix GlobalExcpetionHandler and LoginControllerTest